log
Mon 06 May 2024 11:35:02 PM UTC: 
 treemap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
74f44ff
Mon 06 May 2024 11:39:13 PM UTC: 
 treemap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  5|7
total_score: 5/70
52236e2
Mon 06 May 2024 11:49:17 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:97:1: error: expected expression before ‘}’ token
   97 | }
      | ^
treemap.c:97:1: error: control reaches end of non-void function [-Werror=return-type]
   97 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
6138e20
Mon 06 May 2024 11:49:25 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|7
total_score: 5/70
3c4e9e1
Tue 07 May 2024 12:04:59 AM UTC: 
 treemap.c | 21 ++++++++++++++++-----
 1 file changed, 16 insertions(+), 5 deletions(-)
 tests:  5|7
total_score: 5/70
a824e47
Tue 07 May 2024 12:08:16 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|6
total_score: 15/70
fb0e65e
Tue 07 May 2024 12:08:35 AM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  11|6
total_score: 15/70
3c3a647
Tue 07 May 2024 12:14:22 AM UTC: 
 treemap.c | 36 ++++++++++++++++++++++++++++++++++++
 1 file changed, 36 insertions(+)
 tests:  12|6
total_score: 15/70
337465b
Tue 07 May 2024 12:15:07 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  12|6
total_score: 15/70
d08ec2a
Tue 07 May 2024 12:49:09 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  12|6
total_score: 15/70
68a2481
Tue 07 May 2024 12:49:18 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  12|6
total_score: 15/70
3197aab
Tue 07 May 2024 12:49:25 AM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  12|6
total_score: 15/70
89c3c57
Tue 07 May 2024 01:41:31 AM UTC: 
 treemap.c | 40 +++++++++++++++-------------------------
 1 file changed, 15 insertions(+), 25 deletions(-)
 tests:  13|5
total_score: 25/70
b6b5da8
Tue 07 May 2024 01:44:43 AM UTC: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
c9802e8
Tue 07 May 2024 02:00:51 AM UTC: 
 treemap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  16|4
total_score: 30/70
fc191fb
Tue 07 May 2024 02:11:09 AM UTC: 
 treemap.c | 31 +++++++++++++++++++++++++++++++
 1 file changed, 31 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:105:16: error: unused variable ‘parent’ [-Werror=unused-variable]
  105 |     TreeNode * parent = NULL;
      |                ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
595ed6d
Tue 07 May 2024 02:11:45 AM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|0
357ac00
Tue 07 May 2024 02:21:10 AM UTC: 
 treemap.c | 29 -----------------------------
 1 file changed, 29 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:104:16: error: unused variable ‘temp’ [-Werror=unused-variable]
  104 |     TreeNode * temp = tree->root;
      |                ^~~~
cc1: all warnings being treated as errors
Compilation failed
75d94a1
Tue 07 May 2024 02:21:16 AM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  16|4
total_score: 30/70
0c89841
Tue 07 May 2024 02:22:38 AM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:125:1: error: expected expression before ‘}’ token
  125 | }
      | ^
treemap.c:121:16: error: unused variable ‘hijo’ [-Werror=unused-variable]
  121 |     TreeNode * hijo;
      |                ^~~~
cc1: all warnings being treated as errors
Compilation failed
bc478bd
Tue 07 May 2024 02:25:07 AM UTC: 
 treemap.c | 27 ++++++++++++++++++++++++++-
 1 file changed, 26 insertions(+), 1 deletion(-)
 tests:  17|4
total_score: 35/70
9e1df44
Tue 07 May 2024 02:26:07 AM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
15b8f00
Tue 07 May 2024 02:26:23 AM UTC: 
 treemap.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  17|4
total_score: 35/70
d324992
